--- a/notebook-tutorial.mdx
+++ b/notebook-tutorial.mdx
@@ -480,7 +480,7 @@ class Card:
 +   # The total number of transactions
 +   count_transactions_total: int
 +
-+   # The total number of transactions in the lasy day
++   # The total number of transactions in the last day
 +   count_transactions_1d: int
 +
 +   # The total number of transactions in the last 7 days
