add image for alert description changelog entry

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -32,7 +32,9 @@ Chart(name="Request count").with_trigger(
 )
 ```
 
-These descriptions can also be added to charts created from the web.
+These descriptions can also be set in the Chalk dashboard via the metric alerts interface.
+
+![Alert description interface:](/img/alert-description.png)
 
 ---
 
