--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -8,6 +8,8 @@ published: true
 
 ### Dependencies
 
+Install Chalk in your notebook environment by running the following command in a cell:
+
 ```python notebook.ipynb
 !pip install chalkpy[all]
 ```
