--- a/notebook-tutorial.mdx
+++ b/notebook-tutorial.mdx
@@ -20,7 +20,7 @@ a dataset of credit card authorizations and build out some features and resolver
 
 ## Table of Contents
 
-1. [Configure Datasources](#configure-datasources)
+1. [Configure Datasources](#configure-data-sources)
 2. [Defining Features](#defining-features)
 3. [Defining Resolvers](#defining-resolvers)
 4. [Computed Features](#computed-features)
