--- a/feature-types.mdx
+++ b/feature-types.mdx
@@ -28,21 +28,32 @@ class Book:
 
 ```
 
-## Collections
+## Lists and Sets
 
-Features can also be lists and sets of any primitive, including
-[dataclasses](/docs/feature-types#dataclass),
-[Pydantic models](/docs/feature-types#pydantic-models), and
-[attrs classes](/docs/feature-types#attrs).
+Features can be lists or sets of [scalar](/docs/feature-types#scalars) or [struct](/docs/feature-types#structs) types.
 
 ```python
+@dataclass
+class Chapter:
+    start_page: int
+    end_page: int
+
 @features
 class Book:
     authors: list[str]
     categories: set[str]
+    chapters: list[Chapter]
 ```
 
-## Dataclass
+## Structs
+
+Features can be a struct, which is a collection that maps a fixed set of keys to sub-fields. You can use
+[dataclasses](/docs/feature-types#dataclass),
+[Pydantic models](/docs/feature-types#pydantic-models), and
+[attrs classes](/docs/feature-types#attrs) to represent struct features.
+
+
+### Dataclass
 
 You can use any `dataclass` as a struct feature.
 Struct types should be used for objects that don't have ids.
@@ -61,7 +72,7 @@ class Book:
     jacket_info: JacketInfo
 ```
 
-## Pydantic models
+### Pydantic models
 
 If you prefer `pydantic` to `dataclass`, you can use that instead.
 
@@ -78,30 +89,8 @@ class Book:
     ...
 ```
 
-## Document
 
-Both [dataclass](/docs/feature-types#dataclass) and [pydantic](/docs/feature-types#pydantic-models) 
-structs are implemented using the [pyarrow](https://arrow.apache.org/docs/python/index.html) 
-serialization format, a high-performance schema for data serialization.  
-This data is stored "value only", i.e. without keys, so any change to these structs over time will invalidate historical data.
-To support feature values where the schema changes over time, we introduced the `Document` struct type.   
-Documents are serialized as JSON and supports changes to schema over time, at the cost of a small performance penalty.
-
-```python
-from pydantic import BaseModel
-from chalk import Document
-
-class AuthorInfo(BaseModel):
-    first_name: str
-    last_name: str
-
-@features
-class Book:
-    title: Document[AuthorInfo]
-    ...
-```
-
-## attrs
+### Attrs
 
 Alternatively, you can use `attrs`. Any of these struct types
 (`dataclass`, `pydantic`, and `attrs`) can be used with
@@ -122,11 +111,73 @@ class Book:
     ...
 ```
 
+
+## Document
+
+Both [dataclass](/docs/feature-types#dataclass) and [Pydantic](/docs/feature-types#pydantic-models) 
+structs are implemented using the [PyArrow](https://arrow.apache.org/docs/python/index.html) 
+serialization format, a high-performance schema for data serialization.  
+This data is stored "value only", i.e. without keys, so any change to these structs over time will invalidate historical data.
+To support feature values where the schema changes over time, we introduced the `Document` struct type.   
+Documents are serialized as JSON and supports changes to schema over time, at the cost of a small performance penalty.
+
+```python
+from pydantic import BaseModel
+from chalk import Document
+
+class AuthorInfo(BaseModel):
+    first_name: str
+    last_name: str
+
+@features
+class Book:
+    title: Document[AuthorInfo]
+    ...
+```
+
+## Vectors
+
+Features can be vectors (fixed sized arrays of floats), such as the output from an embedding model.
+Unlike list or set features, are compatible with [embedding functions](/docs/embeddings) and [nearest neighbor similarity search](/docs/nearest-neighbor).
+
+```python
+from chalk.features import features, Vector
+
+@features
+class Document:
+    embedding: Vector[1536]  # Defines a vector with 1536 dimensions
+```
+
+When using the built-in [embedding functions](/docs/embeddings), then the vector dimensions don't need to be specified, as Chalk will automatically infer it
+from the embedding model.
+
+```python
+from chalk import features, embedding, vector
+
+@features
+class Document:
+    content: str
+    # Chalk knows that text-embedding-ada-002 has 1536 dimensions
+    embedding: Vector = embedding(feature="content", provider="openai", model="text-embedding-ada-002")
+```
+
+By default, vectors are persisted as 16 bit floats for efficiency. However, Chalk also supports persisting vectors as 32-bit or 64-bit floats via the keywords
+"f32" and "f64", respectively.
+
+```python
+from chalk import Vector
+
+@features
+class Document:
+    # Defines a vector with 1536 dimensions that will be persisted with 32 bit precision 
+    embedding: Vector["f32", 1536]
+```
+
 ## Custom serializers
 
 Finally, if you have an object that you want to serialize that isn't
 from `dataclass`, `attrs`, or `pydantic`, you can write a custom codec.
-This custom codec must target a type that can be serialized to a [Pyarrow
+This custom codec must target a type that can be serialized to a [PyArrow
 data type](https://arrow.apache.org/docs/python/api/datatypes.html), which
 is the underlying serialization format for all features.
 
