--- a/cohere.mdx
+++ b/cohere.mdx
@@ -10,7 +10,7 @@ import { AddCohereIntegration } from '@/components/shared/cohere';
 
 Chalk supports [Cohere](https://cohere.com/embed) as an [embeddings](/docs/embeddings#cohere) provider.
 
-## Adding OpenAI
+## Adding Cohere
 
 On the dashboard, you can provide your Cohere api key.
 
