Apply suggestions from code review
Co-authored-by: Elliot Marx <elliot@chalk.ai>

--- a/openai.mdx
+++ b/openai.mdx
@@ -12,6 +12,6 @@ Chalk supports [OpenAI](https://openai.com/product) as an [embeddings](/docs/emb
 
 ## Adding OpenAI
 
-On the dashboard, you can provide your OpenAI api key.
+On the dashboard, you can provide your OpenAI API key.
 
 <AddOpenAIIntegration onSubmit={(e) => e.preventDefault()} />
