--- a/vector-search.mdx
+++ b/vector-search.mdx
@@ -14,7 +14,7 @@ Nearest neighbor relationships are only supported for [vector features](/docs/fe
 
 <TipInfo>
   We recommend to first take a look through Chalk's support for <a href="/docs/feature-types#vectors">vector
-  features</a> and <a href="/docs/embeddings">embedding functions</a> beforehand.
+  features</a> and <a href="/docs/embeddings">embedding functions</a>.
 </TipInfo>
 
 
@@ -25,20 +25,17 @@ of frequently asked questions and answers. Our goal is to return the five most r
 ---
 
 ## Defining nearest neighbor relationships
-Using the `nearest` function, we can express a relationship where we want the nearest documents for each query. Chalk uses the
-`==~` operator to denote a "nearest neighbor" relationship.
+Using the `has_many` function and the `isnear` method, we can express a relationship where we want the nearest documents for each query.
 
 ```py
-from chalk.features import DataFrame, features, embedding, nearest, Vector
+from chalk.features import DataFrame, features, embedding, has_many, Vector
 
 @features
 class SearchQuery:
   query: str
   product_version: int
   embedding: Vector = embedding(...)
-  nearest_documents: DataFrame[FAQDocument] = nearest(
-    lambda: SearchQuery.embedding ==~ FAQDocument.embedding
-  )
+  nearest_documents: DataFrame[FAQDocument] = has_many(lambda: SearchQuery.embedding.isnear(FAQDocument.embedding))
   response: str
 
 @features
@@ -60,31 +57,35 @@ Nearest neighbor relationships use a distance function to measure closeness. By 
 also supported. To change the distance function, use the `distance` argument:
 
 ```py
-from chalk.features import DataFrame, features, nearest
+from chalk.features import DataFrame, features, has_many
 
 @features
 class SearchQuery:
-  nearest_documents: DataFrame[Document] = nearest(
-    lambda: SearchQuery.embedding ==~ FAQDocument.embedding,
-    distance="cosine",  # or "inner product"
+  nearest_documents: DataFrame[Document] = has_many(
+    lambda: SearchQuery.embedding.isnear(
+      FAQDocument.embedding,
+      distance="cosine",  # or "inner product"
+    )
   )
 ```
 
 
 ### Indexing
 
-By default, Chalk indexes nearest-neighbor relationships using hierarchical navigable small world (HNSW) graphs. Compared to linear search,
-HNSW has lower algorithmic complexity and thereby significantly better performance when querying a relationship with many examples. However, unlike other indexing strategies,
-HNSW is trades recall for performance. If perfect recall is required, you can set the `index=None` parameter when defining the relationship.
+By default, Chalk indexes nearest-neighbor relationships with hierarchical navigable small world (HNSW) graphs.
+Compared to linear search,
+HNSW has lower algorithmic complexity and thereby significantly better performance when querying a relationship with
+many examples. However, unlike other indexing strategies,
+HNSW is trades recall for performance. If perfect recall is required, you can set the `index=None` parameter when
+defining the relationship.
 
 ```py
-from chalk.features import DataFrame, features, nearest
+from chalk.features import DataFrame, features, has_many
 
 @features
 class SearchQuery:
-  nearest_documents: DataFrame[Document] = nearest(
-    lambda: SearchQuery.embedding ==~ FAQDocument.embedding,
-    index=None,
+  nearest_documents: DataFrame[Document] = has_many(
+    lambda: SearchQuery.embedding.isnear(FAQDocument.embedding, index=None)
   )
 ```
 
@@ -101,13 +102,13 @@ from chalk import realtime
 
 @realtime
 def generate_response(
-  # Query for the five most relevant documents, and get a DataFrame of the links
+  # Query for the five most relevant documents, and select their links
   nearest_documents: SearchQuery.nearest_documents[FAQDocument.link, :5],
 ):
   return "\n".join(nearest_documents[FAQDocument.link])
 ```
 
-### Predicate Filtering
+### Filtering
 
 Inside the input argument signature, we can include filters for more accurate results. The filters will be applied _before_ the limit is applied.
 
@@ -129,8 +130,8 @@ def generate_response(
     :5,
   ],
 ):
-  # Don't do this! Now filtered_nearest_documents may be empty,
-  # if the nearest five documents are all for a different product version
+  # Don't do this! If the nearest five documents are all for a different product version,
+  # then filtered_nearest_documents will be empty
   filtered_nearest_documents = nearest_documents[FAQDocument.product_version == version]
   return "\n".join(filtered_nearest_documents[FAQDocument.link])
 ```
