--- a/unit-tests.mdx
+++ b/unit-tests.mdx
@@ -19,7 +19,7 @@ Consider the following features and resolvers:
 
 ```py example.py
 from chalk.features import features
-from chalk import realtime, Features
+from chalk import online, Features
 
 @features
 class Home:
