inline syntax + underscore

--- a/notebook-inline.mdx
+++ b/notebook-inline.mdx
@@ -30,7 +30,7 @@ If we wanted to define a feature inline in a notebook cell, we could do so like 
 RocketEngine.density: float = RocketEngine.mass / RocketEngine.volume
 ```
 
-Alternatively, we can use the Underscore syntax:
+Alternatively, we can use the [Underscore](/docs/underscore) syntax:
 
 ```python notebook.ipynb
 RocketEngine.density: float = _.mass / _.volume
