Minor docs update

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -11,6 +11,12 @@ See our [public roadmap](https://github.com/orgs/chalk-ai/projects/1) for upcomi
 
 ---
 
+## October 23rd, 2023
+
+### Quality of Life Improvements
+
+- `ChalkClient.query_bulk(...)` and `multi_query` no longer require that references features be defined as Python classes, and string names for inputs and outputs can now be used instead.
+
 ## October 11th, 2023
 
 ### Alert descriptions
