--- a/docker.mdx
+++ b/docker.mdx
@@ -58,7 +58,7 @@ image that you like, with a few requirements:
 
 - `python` must be on the path
 - `pip` must be on the path
-- The Python version must be `== 3.10`
+- The Python version must be `== 3.10` or `== 3.11`
 - There should be no folder or file at `/app`
 
 Chalk is responsible for mounting your code into
@@ -70,7 +70,7 @@ the image, and for installing your requirements with pip.
 
 The Python version for a Chalk project is set at the project level.
 The version is set with the `.chalk.yml` file in your project repo.
-Today, Chalk accepts only `python310` as the value for `runtime`,
+Today, Chalk accepts only `python310` or `python311` as the value for `runtime`,
 but as the platform supports more runtimes, more values will
 be allowed here.
 
@@ -82,4 +82,3 @@ environments:
   prod:
     runtime: python310
 ```
-
