--- a/architecture.mdx
+++ b/architecture.mdx
@@ -14,13 +14,8 @@ stores this data in _online_ and _offline storage_, and provides _monitoring_ on
 
 ## Service Architecture
 
-By default, Chalk operates as a SaaS offering,
-where Chalk executes pipelines and stores data on
-its cloud infrastructure.
-However, Chalk can also deploy its software into your
-AWS or GCP project.
-In this model, environments are provisioned via [Terraform](https://terraform.io)
-and managed by the Chalk team.
+
+Chalk offers a hosted model ("Chalk Cloud"), or a customer-hosted model ("Customer Cloud").
 
 There are a few main components of a Chalk deployment:
 
