--- a/docker.mdx
+++ b/docker.mdx
@@ -58,7 +58,7 @@ image that you like, with a few requirements:
 
 - `python` must be on the path
 - `pip` must be on the path
-- The Python version must be `== 3.10` or `== 3.11`
+- The Python version can be `python310` or `python310`
 - There should be no folder or file at `/app`
 
 Chalk is responsible for mounting your code into
