--- a/underscore.mdx
+++ b/underscore.mdx
@@ -10,7 +10,7 @@ description: Using underscore expressions to define features
 Underscore expressions can be used to define and
 resolve features that can be derived from operations on other features
 
-Consider the feature class `RocketEngine` define below
+Consider the feature class `RocketEngine` define below:
 
 ```python
 from chalk.features import features
