--- a/underscore.mdx
+++ b/underscore.mdx
@@ -8,7 +8,7 @@ description: Using underscore expressions to define features
 ## Underscore expressions
 
 Underscore expressions can be used to define and
-resolve features that can be derived from operations on other features
+resolve features from operations on other features.
 
 Consider the feature class `RocketEngine` define below:
 
