--- a/underscore.mdx
+++ b/underscore.mdx
@@ -22,8 +22,8 @@ class RocketEngine:
     thrust: float
 ```
 
-Suppose we wanted to define a feature called `density` and resolve it as `mass / volume`,
-we can use the underscore feature definition syntax as follows
+Suppose we wanted to define a feature called `density` and resolve it as `mass / volume`.
+We can use the underscore feature definition syntax as follows:
 
 ```diff-py
 - from chalk.features import features
