--- a/underscore.mdx
+++ b/underscore.mdx
@@ -109,7 +109,7 @@ class RocketShip:
 +   total_mass: float = _.engine.mass + _.astronauts[_.mass].sum()
 ```
 
-Here we used the underscore syntax do a [projection](/docs/dataframe#projections) on the `mass` column on the
+Here we used the underscore syntax do a [projection](/docs/dataframe#projections) of the `mass` column in the
 astronauts `DataFrame`.
 
 
