--- a/underscore.mdx
+++ b/underscore.mdx
@@ -47,7 +47,7 @@ The expression `_.mass / _.volume` is equivalent to `RocketEngine.mass / RocketE
 
 ---
 
-## Dataframes
+## DataFrames
 
 Underscore can also be used to define expressions with [`DataFrame`](/docs/dataframe) features.
 
